[2단계 - 사다리 게임 실행] 마코(이규성) 미션 제출합니다. (#239)
* refactor : 불필요한 BeforeEach 제거

* feat : simpleArrayList 구현

* feat : simpleALinkedList 구현

* refactor : 메서드 분리

* docs : 기능 목록 정리

* docs : 기능 목록 정리

* docs : step2 추가된 기능 목록 정리

* style : 개행

* feat : 플레이어는 사다리를 이동한다.

* feat : 사다리를 탄다

* docs : 기능 목록 수정

* docs : 기능 목록 수정

* refactor : ladder의 getter가 int를 반환하도록 변경

* refactor : LadderGame 삭제

* refactor :Player 이동 로직 수정

* refactor : 테스트의 초기 설정을 @BeforeEach에서 하도록 수정

* feat : 플레이어를 모두 이동

* feat : 이름에 해당하는 플레이어의 위치를 계산한다

* feat : 모든 플레이어를 높이만큼 이동시킨다.

* style : 개행

* feat : result 일급컬렉션 추가

* feat : 결과를 계산

* feat : 추가된 뷰 요구사항 구현

* feat : 이름을 가지고 위치를 정해주는 기능 설정

* refactor : 원시값 포장

* refactor : 접근제어자 수정

* refactor : 없는 플레이어의 결과 요청 예외 처리

* feat : 결과 입력과, 결과를 보고 싶은 사람의 입력에 대한 예외 처리 추가

* feat : 결과를 보고싶은사람을 반복해서 입력받는 기능 추가

* refactor : 컨트롤러 책임 분리

* refactor : 불필요한 메서드 제거

* refactor : 결과를 보고싶은 사람을 반복해서 입력받는 로직 변경

* refactor : 파라미터에 final 키워드 추가

* refactor : makeLadder 메서드 이름 변경

* refactor : make 메서드를 정적 메서드로 변경

* refactor : 파라미터에 final 키워드 추가

* refactor : 파라미터에 final 키워드 추가

* refactor : 매직넘버 상수 처리

* refactor : 컬렉션 반환시 List.copyOf로 변경

* refactor : 컬렉션 반환시 List.copyOf로 변경

* refactor : Position 정적 팩터리 메서드 이름 변경

* refactor : Position 정적 팩터리 메서드 이름 변경

* refactor : Position 정적 팩터리 메서드 이름 변경

* refactor : position 동등성 추가하여 비교 가능하도록 변경

* style : 불필요한 개행 제거

* refactor : 테스트 이름 추가

* refactor : 불필요한 테스트 제거

* refactor : 테스트 케이스마다 assert를 1회만 하도록 변경

* style : 개행

* style : 개행

* refactor : 컨트롤러의 책임 뷰로 이동

* refactor : 테스트 케이스 분리

* refactor : 결과를 보고 싶은 사람을 입력받을 때 메시지 수정

* refactor : 출력 메시지 수정

* refactor : 누락된 move메서드 추가 실행

* refactor : 축약된 변수명 변경

* refactor : 메서드 이름 변경

* refactor : 뷰에서 도메인 생성하지 않도록 변경

* chore : dto 패키지 이동

* refactor : allPlayersName String 반환하도록 변경

* refactor : 불필요한 메서드 제거

* refactor : 출력 결과 반복에서 DTO사용하도록 수정

* ref