@@ -2,35 +2,54 @@ package domain.model;
 
 import domain.vo.Height;
 import domain.vo.Width;
+import domain.wrapper.Position;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 public class Ladder {
+
+    private static final int START_POSITION = 0;
+
     private final Height height;
     private final Width width;
     private final List<Layer> layers = new ArrayList<>();
 
-    public Ladder(final Height height, final Width width) {
-        this.height = height;
-        this.width = width;
+    public Ladder(final int height, final int width) {
+        this.height = new Height(height);
+        this.width = new Width(width);
     }
 
-    public void addLayer(Layer layer) {
+    public boolean hasLeftAt(final Position position) {
+        Layer layer = layers.get(position.getY());
+        if (position.getX() == START_POSITION) {
+            return false;
+        }
+        return layer.getLine(position.getX() - 1);
+    }
+
+    public boolean hasRightAt(final Position position) {
+        Layer layer = layers.get(position.getY());
+        if (position.getX() >= layer.getLines().size()) {
+            return false;
+        }
+        return layer.getLine(position.getX());
+    }
+
+    public void addLayer(final Layer layer) {
         layers.add(layer);
     }
 
     public List<Layer> getLayers() {
-        return Collections.unmodifiableList(layers);
+        return List.copyOf(layers);
     }
 
-    public Height getHeight() {
-        return this.height;
+    public int getHeight() {
+        return this.height.getValue();
     }
 
-    public Width getWidth() {
-        return this.width;
+    public int getWidth() {
+        return this.width.getValue();
     }
 
 }
